classDiagram

%% =====================
%% Core Classes
%% =====================

class University {
- name : string {static}
- divisions : vector<Division*> {static}
+ setName(name : string) : void
+ getName() : string
+ addDivision(division : Division*) : void
+ printInfo() : void
}

class Division {
# adress : Adress
# employees : vector<Employee*>
+ Division(adress : Adress)
+ getAdress() : Adress
+ printInfo() : void
}

class Faculty {
- name : string
- students : vector<Student*>
+ Faculty(name : string, adress : Adress)
+ getName() : string
+ getAdress() : Adress
+ addStudent(student : Student*) : void
+ getStudents() : vector<Student*>
+ addEmployee(employee : Employee*) : void
+ getEmployees() : vector<Employee*>
+ printInfo() : void
}

class Rectorate {
+ Rectorate(adress : Adress)
+ getAdress() : Adress
+ printInfo() : void
+ addEmployee(employee : Employee*) : void
+ getEmployees() : vector<Employee*>
}

class Adress {
- city : string
- street : string
- houseNumber : string
- postCode : int
+ Adress(city : string, street : string, postCode : int)
+ Adress(city : string, street : string, houseNumber : string, postCode : int)
+ getAdress() : string
+ getCity() : string
+ getStreet() : string
+ getHouseNumber() : string
+ getPostCode() : int
}

%% =====================
%% People Hierarchy
%% =====================

class Person {
# name : string
# id : string
+ Person(name : string, id : string)
+ getName() : string
+ getId() : string
+ printInfo() : void
}

class Employee {
+ Employee(name : string, id : string)
+ getName() : string
+ getId() : string
+ printInfo() : void
}

class Student {
- subjects : vector<Subject*>
+ Student(name : string, id : string)
+ getName() : string
+ getId() : string
+ addSubject(subject : Subject*) : void
+ getSubjects() : vector<Subject*>
+ canPass() : bool
+ printInfo() : void
}

class Subject {
- name : string
- teacher : Employee
- grade : int
+ Subject(name : string, teacher : Employee)
+ getName() : string
+ getTeacher() : Employee
+ getGrade() : int
+ incGrade(amount : int) : void
+ canPass() : bool
}

%% =====================
%% Inheritance
%% =====================

Division <|-- Faculty
Division <|-- Rectorate
Person <|-- Employee
Person <|-- Student

%% =====================
%% Associations
%% =====================

University "1" --> "0..*" Division : manages

Division "1" *-- "1" Adress : has
Division "1" --> "0..*" Employee : employs

Faculty "1" --> "0..*" Student : has

Student "1" --> "0..*" Subject : studies

Subject "1" *-- "1" Employee : teacher